--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body,
 
 .picker {
     border-radius: 5px;
-    width: 36px;
-    height: 36px;
+    width: 10%;
+    height: 10%;
     cursor: pointer;
     -webkit-transition: all linear .2s;
     -moz-transition: all linear .2s;
