--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,27 @@ body,
 canvas {
     cursor: url(../images/pen.png) 2 2, pointer;
 }
+
+#overlay {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(255, 255, 255);
+    z-index: 2;
+    cursor: pointer;
+}
+
+#overlay-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: white;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
