--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ canvas {
     cursor: url(../images/pen.png) 2 2, pointer;
 }
 
-#overlay {
+.overlay {
     position: fixed;
     display: block;
     width: 100%;
