--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,17 @@ body,
     left: 10px;
 }
 
+#content .refresh {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 100px;
+    width: 100px;
+    background-size: contain;
+    border: none;
+    background-color: white;
+}
+
 canvas {
     cursor: url(../images/pen.png) 2 2, pointer;
 }
